# google-scholar-rss-feed

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  feeds.toml
.github/workflows/: docker-publish.yml
src/: config.rs  main.rs  openalex.rs
