[package]
name = "google-scholar-rss-feed"
description = "Generates a single RSS feed of recent scientific publications for one or more authors, sorted by date. Parses data from OpenAlex."
repository = "https://github.com/Julien-cpsn/google-scholar-rss-feed"
documentation = "https://github.com/Julien-cpsn/google-scholar-rss-feed"
authors = ["Julien-cpsn"]
license = "MIT"
categories = ["science"]
version = "0.1.7"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", default-features = false, features = ["rt", "rt-multi-thread", "macros", "parking_lot"] }
parking_lot = { version = "0.12.3", default-features = false, features = ["send_guard"] }
hyper = { version = "1.6.0", default-features = false, features = ["server", "http1"] }
hyper-util = { version = "0.1.10", default-features = false, features = ["tokio", "server"] }
http-body-util = { version = "0.1.2", default-features = false }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
toml = "0.8.19"
rss = { version = "2.0.12", default-features = false, features = ["builders", "url"] }
lazy_static = { version = "1.5.0", default-features = false }
url = { version = "2.5.4", default-features = false }
chrono = { version = "0.4.39", default-features = false, features = ["now"] }
